--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -27,13 +27,19 @@ jobs:
         run: docker cp $GITHUB_WORKSPACE/klayout/EBeam/pymacros ebeam_test:/home/pymacros
 
       - name: Run KLayout Python script inside container and capture exit code
-        run: docker exec ebeam_test klayout -zz -r pymacros/EBeam_Lib_PCellTests.py || echo "KLAYOUT_EXIT_CODE=$?" >> $GITHUB_ENV
-        continue-on-error: true
+        run: docker exec ebeam_test python /home/pymacros/run_tests.py || echo "KLAYOUT_EXIT_CODE=$?" >> $GITHUB_ENV
+        # run: docker exec ebeam_test klayout -zz -r pymacros/EBeam_Lib_PCellTests.py || echo "KLAYOUT_EXIT_CODE=$?" >> $GITHUB_ENV
+        # continue-on-error: true
 
       - name: Stop container and remove it 
         run: |
                 docker stop ebeam_test
                 docker rm ebeam_test
+        
+      - name: Upload coverage reports to Codecov.
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Fail job if exit code is non-zero
         run: |
