--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -27,7 +27,7 @@ jobs:
         run: docker cp $GITHUB_WORKSPACE/klayout/EBeam/pymacros ebeam_test:/home/pymacros
 
       - name: Install coverage inside the container
-        run: docker exec ebeam_test pip install coverage
+        run: docker exec ebeam_test /usr/bin/python3 -m pip install coverage
 
       - name: Run KLayout Python script inside container and capture exit code
         run: docker exec ebeam_test /usr/bin/python3 /home/pymacros/run_tests.py || echo "KLAYOUT_EXIT_CODE=$?" >> $GITHUB_ENV
