--- a/.github/workflows/Docker_Image.yml
+++ b/.github/workflows/Docker_Image.yml
@@ -58,13 +58,13 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           
-      - name: Build and push Docker image as latest image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}-latest
-          labels: ${{ steps.meta.outputs.labels }}
+      #- name: Build and push Docker image as latest image
+      #  uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+      #  with:
+      #    context: .
+      #    push: true
+      #    tags: ${{ steps.meta.outputs.tags }}-latest
+      #    labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push Docker image as unique image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
