run if new pcell is pushed or a pr with new pcell is merged

--- a/.github/workflows/Docker_Image.yml
+++ b/.github/workflows/Docker_Image.yml
@@ -9,15 +9,23 @@ on:
       - 'SiEPIC/SiEPIC_EBeam_PDK'
   
   push:
-    branches: [ "master" ]
+    branches: [ "ebeam-tests-fixed" ] #change to master after
     paths:
       - 'Dockerfile'
+      - 'klayout/EBeam/pymacros/pcells_EBeam/**'
+      - 'klayout/EBeam/pymacros/pcells_SiN/**'
+      - 'klayout/EBeam/pymacros/pcells_EBeam_Dream/**'
+      - 'klayout/EBeam/pymacros/pcells_EBeam_Beta/**'
   pull_request:
     types:
       - closed 
-    branches: [ "master" ]
+    branches: [ "ebeam-tests-fixed" ] #change to master after
     paths:
       - 'Dockerfile'
+      - 'klayout/EBeam/pymacros/pcells_EBeam/**'
+      - 'klayout/EBeam/pymacros/pcells_SiN/**'
+      - 'klayout/EBeam/pymacros/pcells_EBeam_Dream/**'
+      - 'klayout/EBeam/pymacros/pcells_EBeam_Beta/**'
     
 env:
   REGISTRY: ghcr.io
