--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -58,10 +58,11 @@ jobs:
             # Define the destination path in the Docker container
             destination_path="/root/.klayout/salt/SiEPIC_EBeam_PDK/klayout/EBeam/pymacros/$folder"
             
-            echo "Copy $GITHUB_WORKSPACE/$file to $destination_path"
+            #echo "Copy $GITHUB_WORKSPACE/$file to $destination_path"
+            echo "Copy /home/pymacros/$folder/$filename to $destination_path"
             
             # Perform docker cp for each file
-            docker cp "$GITHUB_WORKSPACE/$file" ebeam_test:"$destination_path"
+            docker cp "/home/pymacros/$folder/$filename" ebeam_test:"$destination_path"
 
             echo "Copied $file to $destination_path"
           done
