--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -62,7 +62,7 @@ jobs:
             echo "Copy /home/pymacros/$folder/$filename to $destination_path"
             
             # Perform docker cp for each file
-            docker cp "/home/pymacros/$folder/$filename" ebeam_test:"$destination_path"
+            docker cp ebeam_test:"/home/pymacros/$folder/$filename" ebeam_test:"$destination_path"
 
             echo "Copied $file to $destination_path"
           done
