--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -59,10 +59,11 @@ jobs:
             destination_path="/root/.klayout/salt/SiEPIC_EBeam_PDK/klayout/EBeam/pymacros/$folder"
             
             #echo "Copy $GITHUB_WORKSPACE/$file to $destination_path"
-            echo "Copy /home/pymacros/$folder/$filename to $destination_path"
+            echo "Copy $GITHUB_WORKSPACE/$file to $destination_path"
+            echo "File $file"
             
             # Perform docker cp for each file
-            docker cp ebeam_test:"/home/pymacros/$folder/$filename" ebeam_test:"$destination_path"
+            docker cp "$GITHUB_WORKSPACE/$file" ebeam_test:"$destination_path"
 
             echo "Copied $file to $destination_path"
           done
