--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -43,15 +43,13 @@ jobs:
           added_files="${{ steps.added-files.outputs.added_files }}"
           echo "Files to copy: $added_files"
       
-          #IFS=$'\n' # Set Internal Field Separator to newline to handle file paths with spaces
+          IFS=' ' # Set Internal Field Separator to newline to handle file paths with spaces
           #files_array=($added_files) # convert to array of file paths
           #echo "Files Array: $files_array"
           
-          IFS=$'\n' read -r -a files_array <<< "$added_files"
-
-          echo "$IFS"
-
-          for file in "${files_array[@]}"; do
+          #IFS=' ' read -r -a files_array <<< "$added_files"
+    
+          for file in $added_files; do
         
             # Determine the library folder based on the file path
             folder=$(dirname "$file")
