copy over current siepic ebeam pdk into klayout in docker container

--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -42,8 +42,11 @@ jobs:
       - name: Copy new pcell files into klayout in Docker container
         run: |
 
-          destination_path="/root/.klayout/salt/SiEPIC_EBeam_PDK/klayout/EBeam/pymacros/pcells_EBeam"
-          docker cp -f "$GITHUB_WORKSPACE/klayout/EBeam/pymacros/pcells_EBeam/Waveguide.py" ebeam_test:"$destination_path"
+          #destination_path="/root/.klayout/salt/SiEPIC_EBeam_PDK/klayout/EBeam/pymacros/pcells_EBeam"
+          #docker cp -f "$GITHUB_WORKSPACE/klayout/EBeam/pymacros/pcells_EBeam/Waveguide.py" ebeam_test:"$destination_path"
+          docker exec -it ebeam_test rm -r /root/.klayout/salt/SiEPIC_EBeam_PDK/klayout
+
+          docker cp $GITHUB_WORKSPACE/klayout ebeam_test:/root/.klayout/salt/SiEPIC_EBeam_PDK
           
           added_files="${{ steps.added-files.outputs.added_files }}"
       
