move any added/changed file into klayout's ebeam pdk

--- a/.github/workflows/EBeam_Tests.yml
+++ b/.github/workflows/EBeam_Tests.yml
@@ -29,48 +29,49 @@ jobs:
       - name: Copy pymacros folder to docker container
         run: docker cp $GITHUB_WORKSPACE/klayout/EBeam/pymacros ebeam_test:/home/pymacros
 
-      # - name: Get pcell .py files added to EBeam library folders
-      #   id: added-files
-      #   run: |
-      #     if ${{ github.event_name == 'pull_request' }}; then
-      #         echo "added_files=$(git diff --name-status -r HEAD^1 HEAD | grep -E '^[ACM]' | grep -E 'klayout/EBeam/pymacros/(pcells_EBeam|pcells_SiN|pcells_EBeam_Dream|pcells_EBeam_Beta)/' | awk '{print $2}' | xargs)" >> $GITHUB_OUTPUT
-      #     else
-      #         echo "added_files=$(git diff --name-status ${{ github.event.before }} ${{ github.event.after }} | grep -E '^[ACM]' | grep -E 'klayout/EBeam/pymacros/(pcells_EBeam|pcells_SiN|pcells_EBeam_Dream|pcells_EBeam_Beta)/' | awk '{print $2}' | xargs)" >> $GITHUB_OUTPUT
-      #     fi
-      #     echo "Added files: $added_files"
+      - name: Get pcell .py files added to EBeam library folders
+        id: added-files
+        run: |
+          if ${{ github.event_name == 'pull_request' }}; then
+              echo "added_files=$(git diff --name-status -r HEAD^1 HEAD | grep -E '^[ACM]' | grep -E 'klayout/' | awk '{print $2}' | xargs)" >> $GITHUB_OUTPUT
+          else
+              echo "added_files=$(git diff --name-status ${{ github.event.before }} ${{ github.event.after }} | grep -E '^[ACM]' | grep -E 'klayout/' | awk '{print $2}' | xargs)" >> $GITHUB_OUTPUT
+          fi
+          echo "Added files: $added_files"
           
       - name: Copy new pcell files into klayout in Docker container
         run: |
 
-          echo "before removing ebeam pdk from klayout"
-          docker exec ebeam_test rm -r /root/.klayout/salt/SiEPIC_EBeam_PDK/klayout
-          echo "removed ebeam pdk from klayout"
+          # echo "before removing ebeam pdk from klayout"
+          # docker exec ebeam_test rm -r /root/.klayout/salt/SiEPIC_EBeam_PDK/klayout
+          # echo "removed ebeam pdk from klayout"
   
-          docker cp "$GITHUB_WORKSPACE/klayout" ebeam_test:"/root/.klayout/salt/SiEPIC_EBeam_PDK"
+          # docker cp "$GITHUB_WORKSPACE/klayout" ebeam_test:"/root/.klayout/salt/SiEPIC_EBeam_PDK"
           
-          # added_files="${{ steps.added-files.outputs.added_files }}"
+          added_files="${{ steps.added-files.outputs.added_files }}"
       
-          # IFS=' ' # Set Internal Field Separator to space to handle multiple pcells
+          IFS=' ' # Set Internal Field Separator to space to handle multiple pcells
 
-          # for file in $added_files; do
+          for file in $added_files; do
 
-          #   # Determine the library folder based on the file path
-          #   folder=$(dirname "$file")
+            # Determine the library folder based on the file path
+            folder=$(dirname "$file")
 
-          #   # Extract the last part of the path (directory name)
-          #   folder=$(basename "$folder")
+            # Extract the last part of the path (directory name)
+            folder=$(basename "$folder")
 
-          #   # Extract the filename
-          #   filename=$(basename "$file")
+            # Extract the filename
+            filename=$(basename "$file")
 
-          #   # Define the destination path in the Docker container
-          #   destination_path="/root/.klayout/salt/SiEPIC_EBeam_PDK/klayout/EBeam/pymacros/$folder"
+            # Define the destination path in the Docker container
+            #destination_path="/root/.klayout/salt/SiEPIC_EBeam_PDK/klayout/EBeam/pymacros/$folder"
+            destination_path="/root/.klayout/salt/SiEPIC_EBeam_PDK"
 
-          #   # Perform docker cp for each file
-          #   docker cp "$GITHUB_WORKSPACE/$file" ebeam_test:"$destination_path"
+            # Perform docker cp for each file
+            docker cp "$GITHUB_WORKSPACE/$file" ebeam_test:"$destination_path/$file"
 
-          #   echo "Copied $file to $destination_path"
-          # done
+            echo "Copied $file to $destination_path"
+          done
       
       - name: Run KLayout Python script inside container and capture exit code
         run: docker exec ebeam_test klayout -zz -r pymacros/EBeam_Lib_PCellTests.py || echo "KLAYOUT_EXIT_CODE=$?" >> $GITHUB_ENV
